fixed some styles in dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
-    padding: 0 0 70px 0;
+    padding: 0 0 80px 0;
 }
 
 header {
@@ -182,7 +182,7 @@ button:hover {
 footer {
     background-color: #333;
     text-align: center;
-    padding: 25px;
+    padding: 15px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -197,9 +197,7 @@ footer p {
 
 .dark-mode {
 
-    body {
-        background-color: black;
-    }
+    background-color: black;
 
     header {
         background-color: var(--dark-grey);
